# sigil

./: CHANGELOG.md  Cargo.toml  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
assets/: compose.py  generate.sh
src/: animate.rs  color.rs  config.rs  export.rs  gradient.rs  lib.rs  main.rs  mark.rs  render.rs  text.rs  themes.rs
src/fonts/: Big.flf  Ghost.flf  NOTICE.md  Slant.flf  Small.flf  mod.rs
tests/: cli.rs  golden.rs
