[package]
name = "sigil"
version = "0.1.0"
edition = "2021"
description = "Give your CLI a face — modern gradient ASCII banners for your projects."
license = "MIT"

[[bin]]
name = "sigil"
path = "src/main.rs"

[lib]
name = "sigil"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
figlet-rs = "0.1"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
strip = true
