[package]
name = "sigil"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Brand your project in seconds — gradient ASCII banners you can drop into your CLI, README, or source code."
license = "MIT"
readme = "README.md"
repository = "https://github.com/moose25/sigil"
homepage = "https://github.com/moose25/sigil"
keywords = ["ascii", "banner", "figlet", "gradient", "cli"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["assets/", "demo.tape", ".github/"]

# `cargo binstall sigil` — fetch prebuilt release archives instead of building.
# Matches the taiki-e/upload-rust-binary-action assets (sigil-<target>.<ext>).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "sigil"
path = "src/main.rs"

[lib]
name = "sigil"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
figlet-rs = "0.1"
libc = "0.2.186"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
strip = true
